--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-aliyun-emas-analytics" version="1.0.0" xmlns="http://apache.org/cordova/ns/plugins/1.0"
+<plugin id="@wzw1990/cordova-plugin-aliyun-emas-analytics" version="1.0.10" xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android">
   <name>XRAnalytics</name>
   <keywords>cordova,aliyun,emas,aliyunsdk,analytics,tlog,crash,mobile</keywords>
